# SPLN2425

./: .gitignore  README.md
TPC1/: filter.py  simples.txt
TPC2/: pyproject.toml  remove_dupe_lines.py  test_file.txt  test_file2.txt  test_file3.txt
TPC2/output/: filtered_test_file.txt
TPC3/ftk/: base.py
TPC4/: project.toml
TPC4/ftk/: __main__.py  base.py  corpus.py  probability.py
TPC4/tests/: test1.py
TPC6/: pagecache.db  pagecache.db.dir  proc-jonsay-co-uk.py
